# mmsr

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
_docs/: AGENTS.md  CUSTOM_GPT_INSTRUCTIONS.md  MILESTONE_STATUS.md  ROADMAP.md  code.html  journal.md  latest_journal.md  report_design_roadmap.md
config/: report.example.yaml  report.production_minimal.yaml
docs/: index.md  kdb_integration_testing.md  production_readiness.md  report_scope.md
mmsr/: __init__.py  cli.py  logging.py
mmsr/analysis/: __init__.py  anomaly.py  commentary.py  comparison.py  trends.py
mmsr/config/: __init__.py  loading.py  models.py
mmsr/examples/: __init__.py  mock_kdb_demo.py  offline_demo.py  offline_fixtures.py
mmsr/examples/config/: live_kdb_report.yaml
mmsr/kdb/: __init__.py  cache.py  client.py  live_smoke.py  production.py  query_loader.py  query_plan.py  runner.py  schema_contracts.py
mmsr/kdb/q_lib/: mmsr_calculations.q.j2  mmsr_simulated_sources.q.j2
mmsr/kdb/q_templates/: activity.q  calculation_functions.q  effective_spread.q  flow.q  liquidity.q  liquidity_ticks.q  price_impact.q  realized_volatility.q  toxicity_reversion.q  trading_calendar.q
mmsr/kdb/query_templates/: activity.q.j2  effective_spread.q.j2  flow.q.j2  liquidity.q.j2  liquidity_ticks.q.j2  price_impact.q.j2  realized_volatility.q.j2  toxicity_reversion.q.j2  trading_calendar.q.j2
mmsr/llm/: optional_commentary.py
mmsr/metrics/: __init__.py  base.py  registry.py  results.py  starter_definitions.py
mmsr/periods/: __init__.py  buckets.py  calendar.py  models.py  reference.py  symbols.py
mmsr/presentation/: __init__.py  labels.py
mmsr/report/: __init__.py  budgets.py  components.py  drilldowns.py  market_report.py  metric_docs.py  overview.py  render_html.py  sections.py  symbols.py  toxicity.py
mmsr/report/templates/: report.html.j2  report_v2.html.j2
mmsr/report/templates/partials/: commentary_block.html.j2  heatmap.html.j2  help_control.html.j2  metric_card.html.j2  metric_table.html.j2  plotly_chart.html.j2  time_series_chart.html.j2
mmsr/visuals/: __init__.py  placeholders.py  toxicity.py
tests/: test_calendar.py  test_cli.py  test_cli_behavior_snapshots.py  test_commentary.py  test_comparison.py  test_config_files.py  test_config_models.py  test_display_labels.py  test_docs_governance.py  test_drilldowns.py  test_executive_overview.py  test_heatmaps.py  test_html_rendering.py  test_import.py  test_kdb_metric_runner.py  test_kdb_production_execution.py  test_kdb_query_loader.py  test_kdb_query_plan.py  test_kdb_schema_contracts.py  test_live_kdb_smoke.py  test_logging.py  test_market_report.py  test_metric_docs.py  test_metric_help_controls.py  test_metric_registry.py  test_metric_tables.py  test_metric_timeseries.py  test_mock_kdb_demo.py  test_offline_demo.py  test_offline_fixtures.py  test_overview.py  test_packaging_metadata.py  test_periods.py  test_production_cli.py  test_report_budgets.py  test_report_sections.py  test_symbol_anomaly_pages.py  test_symbols.py  test_time_series_charts.py  test_toxicity_reversion.py  (+1 more)
