[tool.poetry]
name = "mmsr"
version = "0.1.0"
description = "Japanese market microstructure monitoring reports from kdb+ level 1 trade and quote data."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "mmsr" }]
include = [
    { path = "mmsr/report/templates/**/*.j2", format = ["sdist", "wheel"] },
    { path = "mmsr/kdb/q_lib/*.q.j2", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
jinja2 = ">=3.1"
pyyaml = ">=6.0"
pydantic = ">=2.0"
typer = ">=0.12"
numpy = ">=1.26"
scipy = ">=1.12"
statsmodels = ">=0.14"

# Keep PyKX optional at runtime by importing lazily in the kdb client.
pykx = { version = ">=2.0", optional = true }
plotly = { version = ">=5.0", optional = true }
polars = { version = ">=0.20", optional = true }

[tool.poetry.extras]
kdb = ["pykx"]
visuals = ["plotly"]
polars = ["polars"]
all = ["pykx", "plotly", "polars"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.15.15"
mypy = ">=1.8"
tox = ">=4.0"
pre-commit = ">=3.0"

[tool.poetry.group.doc.dependencies]
mkdocs = ">=1.6"
mkdocs-material = ">=9.5"
mkdocstrings = { extras = ["python"], version = ">=0.25" }

[tool.poetry.scripts]
mmsr = "mmsr.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "kdb_integration: tests requiring a live kdb+ connection and production schemas",
]

[tool.mypy]
python_version = "3.12"
files = ["mmsr"]
exclude = "(^tests/|^docs/)"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
